--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ description = "A library for adding game systems useful for incremental and mana
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
 serde = { version = "1.0.174", features = ["derive"] }
