--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,3 +27,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build
         run: cargo build --examples
+
+  no_features:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build
+        run: cargo build --no-default-features
