--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,41 @@
 [package]
-name = "incr_lib"
-version = "0.1.0"
-edition = "2021"
-description = "A library for adding game systems useful for incremental and management games"
-license= "MIT OR Apache-2.0"
-authors = []
-publish = false
+name = "overworld"
+description = "Metapackage library for adding game systems useful for incremental, RPG, and management games"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+categories.workspace = true
+keywords.workspace = true
+publish = true
 
 [dependencies]
-rand = "0.8.5"
-
-[dependencies.serde]
-version = "1.0.174"
-optional = true
-features = ["derive"]
+overworld_components = { version = "0.1.0", path = "components" }
 
 [features]
 default = ["serde"]
+serde = ["overworld_components/serde"]
+
+[badges]
+maintenance = { status = "actively-developed" }
+
+[workspace]
+members = [
+    "components"
+]
+
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+license= "MIT OR Apache-2.0"
+authors = [
+    "Zarthus <zarthus@liefland.net>",
+    "Overworld Team <https://github.com/orgs/Liefland/teams/overworld>",
+    "Overworld Contributors <https://github.com/Liefland/overworld/network/contributors>"
+]
+repository = "https://github.com/Liefland/overworld"
+homepage = "https://github.com/Liefland/overworld"
+categories = ["game development", "mathematics", "text processing"]
+keywords = ["game", "rpg", "incremental", "management"]
