readme in cargo file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ repository.workspace = true
 homepage.workspace = true
 categories.workspace = true
 keywords.workspace = true
-publish = true
+readme.workspace = true
+publish.workspace = true
 
 [dependencies]
 overworld_components = { version = "0.2.2", path = "components" }
@@ -42,3 +43,5 @@ repository = "https://github.com/Liefland/overworld"
 homepage = "https://github.com/Liefland/overworld"
 categories = ["game-development", "mathematics", "text-processing"]
 keywords = ["game", "rpg", "incremental", "management"]
+readme = "README.md"
+publish = true
