--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -9,7 +9,8 @@ repository.workspace = true
 homepage.workspace = true
 categories.workspace = true
 keywords.workspace = true
-publish = true
+readme.workspace = true
+publish.workspace = true
 
 [dependencies]
 rand = "0.8.5"
