--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,6 +3,7 @@ name: Rust
 on:
   push:
     branches: [ "main" ]
+    tags: [ "release/v*" ]
   pull_request:
     branches: [ "main" ]
 
@@ -11,26 +12,76 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - name: Build
-        run: cargo build --verbose
-      - name: Run tests
-        run: cargo test --verbose
-      - name: Cargo check
-        run: cargo check
+        run: cargo build
 
   examples:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        component: ["components", "."]
     steps:
       - uses: actions/checkout@v3
       - name: Build
+        working-directory: ${{ matrix.component }}
         run: cargo build --examples
 
   no_features:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        component: ["components", "."]
     steps:
       - uses: actions/checkout@v3
       - name: Build
+        working-directory: ${{ matrix.component }}
         run: cargo build --no-default-features
+
+  test:
+    strategy:
+      matrix:
+        component: ["components", "."]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build
+        working-directory: ${{ matrix.component }}
+        run: cargo build --verbose
+      - name: Run tests
+        working-directory: ${{ matrix.component }}
+        run: cargo test --verbose
+      - name: Cargo check
+        working-directory: ${{ matrix.component }}
+        run: cargo check
+
+  publish_dependencies:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/release/v')
+    needs: [build, examples, no_features, test]
+    strategy:
+      matrix:
+        component: ["components"]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Authenticate
+        run: cargo login ${{ secrets.CARGO_PUBLISH_TOKEN }}
+      - name: Publish Dependency
+        working-directory: ${{ matrix.component }}
+        run: cargo publish
+
+  publish:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/release/v')
+    needs: publish_dependencies
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Authenticate
+        run: cargo login ${{ secrets.CARGO_PUBLISH_TOKEN }}
+      - name: Publish
+        run: cargo publish
