--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,6 +43,17 @@ jobs:
         working-directory: ${{ matrix.component }}
         run: cargo build --no-default-features
 
+  lint:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        component: ["components", "."]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Lint
+        uses: giraffate/clippy-action@v1
+        working-directory: ${{ matrix.component }}
+
   test:
     strategy:
       matrix:
@@ -62,7 +73,7 @@ jobs:
 
   publish_dependencies:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/release/v')
-    needs: [build, examples, no_features, test]
+    needs: [build, examples, no_features, test, lint]
     strategy:
       matrix:
         component: ["components"]
