--- a/dice/Cargo.toml
+++ b/dice/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "overworld_components"
-description = "A library for adding game systems useful for incremental and management games"
+name = "overworld_dice"
+description = "Overworld library - Dice components"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
@@ -11,6 +11,9 @@ categories.workspace = true
 keywords.workspace = true
 readme.workspace = true
 publish.workspace = true
+
+[dependencies]
+rand = "0.8.5"
 
 [dependencies.serde]
 version = "1.0.188"
