--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        component: ["components", "dice"," "."]
+        component: ["components", "dice", "."]
     steps:
       - uses: actions/checkout@v3
       - name: Build
