--- a/components/affinity/Cargo.toml
+++ b/components/affinity/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "overworld_affinity"
 description = "Overworld Affinity Library - Affinity and Multipliers"
-version.workspace = true
+version = "0.1.0"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
